# RLSDK-Generator

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: dllmain.cpp  dllmain.hpp  pch.hpp
src/Engine/: Engine.cpp  Engine.hpp  Pattern.cpp  Pattern.hpp
src/Engine/RocketLeague/: Configuration.cpp  Configuration.hpp  GameDefines.cpp  GameDefines.hpp  Globals.cpp  Globals.hpp  PiecesOfCode.cpp  PiecesOfCode.hpp
src/Framework/: Member.cpp  Member.hpp  Printer.cpp  Printer.hpp
